# GooeyGUI

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  gooey_builder.html  gooeydocs_gen.py  installer.py  readme.md  shape.frag  text.frag  text.vert
.cache/clangd/index/: afadjust.c.F7D88E26C956F191.idx  afadjust.h.9F53C217A5A58726.idx  afblue.c.C6ED289B1967BDD1.idx  afblue.h.6526DDD420D497B3.idx  afcjk.c.F1C8096A99B2DD10.idx  afcjk.h.45D0F36A62802D12.idx  afcover.h.871D08680777AA4B.idx  afdummy.c.C94A75CDA8EBF4C5.idx  afdummy.h.B0C6DEBE599C7BC4.idx  aferrors.h.6996D7C8625F19AF.idx  afglobal.c.42C3B14BDF3240A8.idx  afglobal.h.A8AA87AB40F61FE1.idx  afgsub.c.D824AD20327CFB4C.idx  (+562 more)
cmake/: GooeyGUIConfig.cmake.in
examples/: IoT_dashboard.c  ai_chat  ai_chat.c  amp  b.sh  builder_example  builder_example.c  canvas_test  canvas_test.c  color_mixer  colormixer  colormixer.c  cont  container.c  counter  counter.c  dark.json  drop_surface  drop_surface.c  dropdown_example  dropdown_example.c  example  example_test.h  grid_example  grid_example.c  hello_world  hello_world.c  image_example  image_example.c  index.html  light.json  logs.txt  nodes  nodes.c  plots  plots.c  progressbar.c  robot_dashboard.c  s  script.js  (+12 more)
examples/Benchmaks/: Makefile  stress_test_fill_rate  stress_test_fill_rate.c  stress_test_grid  stress_test_grid.c
include/: gooey.h  user_config.h
include/animations/: gooey_animations.h
include/common/: gooey_common.h
include/core/: gooey_backend.h  gooey_event.h  gooey_timers.h  gooey_widget.h  gooey_window.h
include/event/: gooey_event.h
include/signals/: gooey_signals.h
include/theme/: gooey_theme.h
include/widgets/: gooey_appbar.h  gooey_button.h  gooey_canvas.h  gooey_checkbox.h  gooey_container.h  gooey_ctxmenu.h  gooey_drop_surface.h  gooey_dropdown.h  gooey_fdialog.h  gooey_image.h  gooey_label.h  gooey_layout.h  gooey_list.h  gooey_menu.h  gooey_messagebox.h  gooey_meter.h  gooey_node_editor.h  gooey_notifications.h  gooey_plot.h  gooey_progressbar.h  gooey_radiobutton.h  gooey_slider.h  gooey_switch.h  gooey_tabs.h  gooey_textbox.h  gooey_webview.h
internal/: gooey_event_internal.h  gooey_widgets_internal.h
internal/animations/: gooey_animations_internal.h
internal/backends/: glps_backend_internal.c  gooey_backend_internal.h  tft_backend_internal.c
internal/core/: gooey_backend_internal.h  gooey_timers_internal.h  gooey_widget_internal.c  gooey_widget_internal.h  gooey_window.h
internal/event/: gooey_event_internal.h
internal/logger/: pico_logger_internal.c  pico_logger_internal.h
internal/virtual/: gooey_keyboard_internal.h
internal/widgets/: gooey_appbar_internal.c  gooey_appbar_internal.h  gooey_button.h  gooey_button_internal.c  gooey_button_internal.h  gooey_canvas.h  gooey_canvas_internal.c  gooey_canvas_internal.h  gooey_checkbox.h  gooey_checkbox_internal.c  gooey_checkbox_internal.h  gooey_container_internal.c  gooey_container_internal.h  gooey_contextmenu_internal.c  gooey_contextmenu_internal.h  gooey_ctxmenu_internal.h  gooey_debug_overlay_internal.c  gooey_debug_overlay_internal.h  gooey_drop_surface_internal.c  gooey_drop_surface_internal.h  gooey_dropdown.h  gooey_dropdown_internal.c  gooey_dropdown_internal.h  gooey_fdialog_internal.h  gooey_image_internal.c  gooey_image_internal.h  gooey_label.h  gooey_label_internal.c  gooey_label_internal.h  gooey_layout.h  gooey_layout_internal.c  gooey_layout_internal.h  gooey_list.h  gooey_list_internal.c  gooey_list_internal.h  gooey_menu.h  gooey_menu_internal.c  gooey_menu_internal.h  gooey_messagebox.h  gooey_meter_internal.c  (+23 more)
src/animations/: gooey_animations.c  gooey_animations_internal.c
src/backends/: glps_backend.c  glps_backend_internal.c  glps_vk_backend_internal.c  tft_backend_internal.cpp
src/core/: gooey.c  gooey_event.c  gooey_timers.c  gooey_timers_internal.c  gooey_widget.c  gooey_widget_internal.c  gooey_window.c
src/logger/: pico_logger_internal.c
src/signals/: gooey_signals.c
src/theme/: gooey_theme.c
src/virtual/: gooey_keyboard_internal.c
src/widgets/: gooey_appbar.c  gooey_appbar_internal.c  gooey_button.c  gooey_button_internal.c  gooey_canvas.c  gooey_canvas_internal.c  gooey_checkbox.c  gooey_checkbox_internal.c  gooey_container.c  gooey_container_internal.c  gooey_contextmenu_internal.c  gooey_ctxmenu.c  gooey_ctxmenu_internal.c  gooey_debug_overlay_internal.c  gooey_drop_surface.c  gooey_drop_surface_internal.c  gooey_dropdown.c  gooey_dropdown_internal.c  gooey_fdialog.c  gooey_fdialog_internal.c  gooey_image.c  gooey_image_internal.c  gooey_label.c  gooey_label_internal.c  gooey_layout.c  gooey_layout_internal.c  gooey_list.c  gooey_list_internal.c  gooey_menu.c  gooey_menu_internal.c  gooey_messagebox.c  gooey_meter.c  gooey_meter_internal.c  gooey_node_editor.c  gooey_node_editor_internal.c  gooey_notifications.c  gooey_notifications_internal.c  gooey_plot.c  gooey_plot_internal.c  gooey_progressbar.c  (+14 more)
website/: builder.html  docs.html  gooey_builder.html  index.html  quickstart.html
website/docs/: dir_4bc2dda65d93844544aff2d91e34757b.html  dir_4bc2dda65d93844544aff2d91e34757b.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  globals.html  globals_func.html  gooey_8h.html  gooey_8h.js  gooey_8h_source.html  gooey__button_8h.html  gooey__button_8h_source.html  gooey__canvas_8h.html  gooey__canvas_8h_source.html  gooey__checkbox_8h.html  gooey__checkbox_8h_source.html  gooey__drop__surface_8h.html  gooey__drop__surface_8h.js  gooey__drop__surface_8h_source.html  gooey__dropdown_8h.html  gooey__dropdown_8h_source.html  gooey__image_8h.html  gooey__image_8h.js  gooey__image_8h_source.html  gooey__label_8h.html  gooey__label_8h_source.html  gooey__layout_8h.html  gooey__layout_8h_source.html  gooey__list_8h.html  gooey__list_8h.js  gooey__list_8h_source.html  gooey__menu_8h.html  gooey__menu_8h.js  gooey__menu_8h_source.html  gooey__meter_8h.html  gooey__meter_8h.js  gooey__meter_8h_source.html  gooey__plot_8h.html  gooey__plot_8h.js  gooey__plot_8h_source.html  (+14 more)
(+24 files in other folders)
